--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 body {
-    font-family: Roboto;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 500px;
-    width: 350px;
+    width: 400px;
     margin: 0;
   }
   
@@ -15,14 +17,15 @@ body {
   
   canvas {
     border-radius: 50%;
-    border: 5px solid #ddd;
+    border: 10px solid #fff;
     width: 300px; /* Layout width */
     height: 300px; /* Layout height */
     display: block; 
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
   }
   
   button {
-    font-family: Roboto;
+    font-family: 'Poppins', sans-serif;
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #011F5B;
@@ -33,6 +36,6 @@ body {
   }
   
   button:hover {
-    background-color: #2f4fff;
+    background-color:rgb(61, 69, 119);
   }
   
