--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-body {
-    border-radius: 10px;    
+html, body {
+    border-radius: 30px; /* Increase border-radius for rounder corners */
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
@@ -9,8 +9,11 @@ body {
     justify-content: center;
     height: 500px;
     width: 400px;
+    background-color: #ffffff;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
     margin: 0;
-  }
+  }  
   
   #wheel-container {
     text-align: center;
@@ -40,8 +43,6 @@ body {
     background-color: #2f4fff;
   }
   
-
-
 /* Style for the Settings Button */
 #open-settings {
   background: none; /* No default button background */
@@ -63,7 +64,3 @@ body {
 #open-settings img:hover {
   transform: scale(1.1); /* Slightly enlarge on hover for interactivity */
 }
-
-    background-color:rgb(61, 69, 119);
-  }
-  
